# counseLLM

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: app.py  chainlit.md
app/.chainlit/: config.toml
configs/: dpo_config.yaml  sft_config.yaml
data/: prepare_dpo_data.py  prepare_sft_data.py
eval/: evaluate.py  llm_judge.py  test_prompts.json
infra/: modal_app.py
notebooks/: 01_data_exploration.ipynb  02_training.ipynb  03_evaluation.ipynb  04_inference.ipynb
results/: eval_results.json  judge_results.json
results/comparisons/: addiction_01.json  anger_01.json  anxiety_01.json  anxiety_02.json  burnout_01.json  crisis_01.json  crisis_02.json  depression_01.json  depression_02.json  family_01.json  grief_01.json  grief_02.json  identity_01.json  loneliness_01.json  ocd_01.json  parenting_01.json  relationship_01.json  relationship_02.json  self_esteem_01.json  self_esteem_02.json  sleep_01.json  stress_01.json  stress_02.json  trauma_01.json  trauma_02.json
train/: dpo_train.py  merge_and_push.py  push_adapters_local.py  sft_train.py
